--- a/circle.yml
+++ b/circle.yml
@@ -8,7 +8,7 @@ macBuildFilters: &macBuildFilters
     branches:
       only:
         - develop
-        - fix-next-version
+        - 6.9.1-release
         - include-electron-node-version
 
 defaults: &defaults
@@ -36,7 +36,7 @@ testBinaryFirefox: &testBinaryFirefox
     branches:
       only:
         - develop
-        - fix-next-version
+        - 6.9.1-release
   requires:
     - create-build-artifacts
 
@@ -1332,7 +1332,7 @@ jobs:
       - run:
           name: Check current branch to persist artifacts
           command: |
-            if [[ "$CIRCLE_BRANCH" != "develop" && "$CIRCLE_BRANCH" != "fix-next-version" ]]; then
+            if [[ "$CIRCLE_BRANCH" != "develop" && "$CIRCLE_BRANCH" != "6.9.1-release" ]]; then
               echo "Not uploading artifacts or posting install comment for this branch."
               circleci-agent step halt
             fi
@@ -1950,7 +1950,7 @@ linux-workflow: &linux-workflow
           branches:
             only:
               - develop
-              - fix-next-version
+              - 6.9.1-release
         requires:
           - build
     - test-kitchensink:
@@ -1962,7 +1962,7 @@ linux-workflow: &linux-workflow
           branches:
             only:
               - develop
-              - fix-next-version
+              - 6.9.1-release
         requires:
           - build
     - create-build-artifacts:
@@ -2012,7 +2012,7 @@ linux-workflow: &linux-workflow
           branches:
             only:
               - develop
-              - fix-next-version
+              - 6.9.1-release
         requires:
           - create-build-artifacts
     - test-npm-module-and-verify-binary:
@@ -2020,7 +2020,7 @@ linux-workflow: &linux-workflow
           branches:
             only:
               - develop
-              - fix-next-version
+              - 6.9.1-release
         requires:
           - create-build-artifacts
     - test-binary-against-staging:
@@ -2029,7 +2029,7 @@ linux-workflow: &linux-workflow
           branches:
             only:
               - develop
-              - fix-next-version
+              - 6.9.1-release
         requires:
           - create-build-artifacts
 
@@ -2055,7 +2055,7 @@ linux-workflow: &linux-workflow
           branches:
             only:
               - develop
-              - fix-next-version
+              - 6.9.1-release
         requires:
           - create-build-artifacts
 
@@ -2118,7 +2118,7 @@ mac-workflow: &mac-workflow
           branches:
             only:
               - develop
-              - fix-next-version
+              - 6.9.1-release
         requires:
           - darwin-create-build-artifacts
 
@@ -2130,7 +2130,7 @@ mac-workflow: &mac-workflow
           branches:
             only:
               - develop
-              - fix-next-version
+              - 6.9.1-release
         requires:
           - darwin-create-build-artifacts
 
